# entrega-obligatorio-1-sistemas-multiagente

./: .gitignore  README.md  pyproject.toml
agents/: fictitiousplay.py  iql_agent.py  jal_am_agent.py  random_agent.py  regretmatching.py
base/: agent.py  game.py
data/blotto/: blotto_history_fp_vs_fp.pkl  blotto_history_fp_vs_rm.pkl  blotto_history_rm_vs_rm.pkl
data/bos/: bos_history_fp_vs_fp.pkl  bos_history_fp_vs_rm.pkl  bos_history_fp_vs_rnd.pkl  bos_history_rm_vs_rm.pkl  bos_history_rm_vs_rnd.pkl  bos_history_rnd_vs_rnd.pkl  bos_utility_scatter.pkl
data/chicken/: chicken_history_fp_vs_fp.pkl  chicken_history_fp_vs_rm.pkl  chicken_history_fp_vs_rnd.pkl  chicken_history_rm_vs_rm.pkl  chicken_history_rm_vs_rnd.pkl  chicken_history_rnd_vs_rnd.pkl  chicken_utility_scatter.pkl
data/cournot/: cournot_2p_fp_vs_fp.pkl  cournot_2p_fp_vs_random.pkl  cournot_2p_fp_vs_rm.pkl  cournot_2p_rm_vs_random.pkl  cournot_3p_fp_x3.pkl
data/foraging/: agents_foraging_iql_vs_iql.pkl  agents_foraging_iql_vs_jalam.pkl  agents_foraging_iql_vs_random.pkl  agents_foraging_jalam_vs_jalam.pkl  agents_foraging_jalam_vs_random.pkl  foraging_history_coop_3p_2jalam_1iql.pkl  foraging_history_coop_3p_jalam.pkl  foraging_history_iql_vs_iql.pkl  foraging_history_iql_vs_jalam.pkl  foraging_history_iql_vs_random.pkl  (+2 more)
games/: blotto.py  bos.py  chicken.py  cournot.py  foraging.py  mp.py  rps.py  threeplayers.py
notebooks/: Blotto.ipynb  BoS.ipynb  Chicken.ipynb  Foraging.ipynb  MP.ipynb  RPS.ipynb  ThreePlayers.ipynb
utils/: __init__.py  experiments.py  logger.py  plots.py  storage.py
(+16 files in other folders)
